tests/rosetta/out/Java/adfgvx-cipher.error
javac: exit status 1
/tmp/AdfgvxCipher.java:98: error: illegal start of type
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                       ^
/tmp/AdfgvxCipher.java:98: error: illegal start of expression
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                        ^
/tmp/AdfgvxCipher.java:98: error: ')' or ',' expected
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                         ^
/tmp/AdfgvxCipher.java:98: error: not a statement
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                           ^
/tmp/AdfgvxCipher.java:98: error: ';' expected
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                               ^
/tmp/AdfgvxCipher.java:98: error: ';' expected
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                                            ^
/tmp/AdfgvxCipher.java:98: error: ';' expected
            res.add(Integer.parseInt(((?)((List)pairs.get(i)).get(1))));
                                                                    ^
7 errors
